# dwm

./: .gitignore  .profile  Makefile  README.md  autostart.sh  bar.sh  config.def.h  config.h  config.mk  dwm.c  dwm.cpp  flake.nix  shell.nix  startdwm.sh  xresources  自定义.md
.bin/: blurlock.sh  clip_history.sh  rofi.sh  set_vol.sh  start_picom.sh  statusbar.sh
.config/: picom.conf
DEF/: autostart.sh
DEF/statusbar/: statusbar.sh
autostart/: autoscreen.sh  autostart.sh
i3lock/: lock.sh
patch/: patch.md
statusbar/: battery.py  common.py  cpu.py  date.py  icon.py  memory.py  music.py  music_title.py  net.py  screen.py  statusbar.py  statusbar.sh  vol.py  wifi.py
statusbar-rs/: Cargo.toml  flake.nix
statusbar-rs/src/: battery.rs  bus.rs  common.rs  cpu.rs  date.rs  icon.rs  main.rs  memory.rs  music.rs  net.rs  theme.rs  vol.rs  wifi.rs
statusbar-rs/src/theme/: catppuccin_frappe.rs  catppuccin_latte.rs  dracula.rs
themes/: catppuccin.h  dracula.h
