[package]
name = "statusbar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sysinfo = "0.29.10"
regex = "1.10.0"
chrono = "0.4.31"
rodio = "0.17.1"
cpal = "0.15.2"
pnet = "0.34.0"
tokio = { version = "1.33.0", features = ["full"] }