[package]
name = "statusbar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rodio = "0.17.1"
#cpal = "0.15.2"
#pnet = "0.34.0"
#serde = "1.0.189"
#daemonize = "0.5.0"
lazy_static = "1.4.0"
sysinfo = "0.29.10"
regex = "1.10.0"
chrono = "0.4.31"
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
zbus = "3.14.1"
pulsectl-rs = "0.3.2"
psutil = "3.2.2"